--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,15 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
+        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/maker-bundle": "^1.13",
         "symfony/orm-pack": "^1.0",
+        "symfony/twig-pack": "^1.0",
         "symfony/var-dumper": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
